examples/good/01-Types.tms
void main () {
  
  int x = 5;
  boolean y = false;
  string z = "i'm a string";

  printInt(x);
  printBool(y);
  printString(z);

  return;
}